[gd_scene load_steps=7 format=3 uid="uid://djfl7xv6exrxh"]

[ext_resource type="Texture2D" uid="uid://doxre6u2tastf" path="res://Assets/Inventory Art/space big.png" id="1_b15hj"]
[ext_resource type="Script" path="res://Inventory/inv_slot_ui.gd" id="1_cxh48"]
[ext_resource type="Resource" uid="uid://btepo6q5hbj70" path="res://Inventory/player_inventory.tres" id="2_cy6bj"]
[ext_resource type="Resource" uid="uid://bdetm4630h2nk" path="res://Inventory/fish_tank_fish_inventory.tres" id="2_wddm6"]
[ext_resource type="FontFile" uid="uid://b5nrh027kp47x" path="res://Assets/Fonts/Perfect DOS VGA 437.ttf" id="3_0vite"]
[ext_resource type="Resource" uid="uid://c53pfdiqblqvt" path="res://Inventory/decor_fish_tank_inventory.tres" id="3_b6obj"]

[node name="InventorySlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_cxh48")
inv = ExtResource("2_cy6bj")
fish_tank_inv = ExtResource("2_wddm6")
decor_inv = ExtResource("3_b6obj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.0434783, 0.0434783)
texture = ExtResource("1_b15hj")
centered = false

[node name="Quantity" type="Label" parent="."]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(18, 19)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 24.0
offset_right = 18.0
offset_bottom = 19.0
grow_horizontal = 2
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0vite")
theme_override_font_sizes/font_size = 16
text = "00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="CollectAttributes" type="Label" parent="CenterContainer/Panel"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -16.0
offset_top = 7.0
offset_right = 16.0
offset_bottom = 26.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_0vite")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
